--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\est.andreylos\\AppData\\Local\\Continuum\\anaconda3\\envs\\Moc\\python.exe"
+    "python.pythonPath": "C:\\Users\\Andrey Lucas\\Anaconda3\\python.exe"
 }
